# pomotoro-app

./: README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  run_server.py
backend/app/: __init__.py  config.py  db.py  models.py
backend/app/analytics/: models.py  router.py  schemas.py  service.py
backend/app/auth/: deps.py  router.py  schemas.py  utils.py
backend/app/recommendations/: genetic.py  router.py  schemas.py
backend/app/scheduler/: analytics_router.py  genetic_algorithm.py  genetic_scheduler.py  pygad_scheduler.py  router.py  router_new.py  schemas.py
backend/app/services/: __init__.py  analytics.py  llm.py
backend/app/sessions/: router.py  schemas.py
backend/app/users/: deps.py  models.py  schemas.py
backend/docs/: GENETIC_ALGORITHM.md  IMPLEMENTATION.md
backend/evaluation/: __init__.py  baselines.py  generate_figures.py  metrics.py  run_baselines.py  run_full_evaluation.py  runner.py  visualize.py
backend/migrations/: env.py
backend/migrations/versions/: 4afaa470b4cc_initial_schema.py
docs/: POMODORO_IMPLEMENTATION.md  TIME_TRACKING_IMPLEMENTATION.md
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/hooks/: use-element-size.tsx  use-timer.tsx  use-xl.ts
frontend/app/lib/: ai.ts  analytics.ts  api.ts  auth-setup.ts  datetime.test.ts  datetime.ts  env.ts  (+3 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
tests/: demo_pygad.py  test_pygad_genetic.py  test_simple_genetic.py
(+75 files in other folders)
