[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "google-generativeai>=0.8.5",
    "passlib[bcrypt]>=1.7.4",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.10.1",
    "pygad>=3.5.0",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
